k8s-deployment/manifest/namespace.yaml
# manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mern-app

#
